<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/button_fruit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_fruit"
        app:layout_constraintBottom_toTopOf="@+id/button_milk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_milk"
        app:layout_constraintBottom_toTopOf="@+id/button_cereal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_fruit" />

    <Button
        android:id="@+id/button_cereal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_cereal"
        app:layout_constraintBottom_toTopOf="@+id/button_eggs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_milk" />

    <Button
        android:id="@+id/button_eggs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_eggs"
        app:layout_constraintBottom_toTopOf="@+id/button_bread"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_cereal" />

    <Button
        android:id="@+id/button_bread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_bread"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_eggs" />
</android.support.constraint.ConstraintLayout>